--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,29 @@
-index_REMOTE_18212.html
-index_REMOTE_16404.html
-index_LOCAL_18212.html
-index_LOCAL_16404.html
-index_BASE_18212.html
-index_BASE_16404.html
-index_BACKUP_18212.html
-index_BACKUP_16404.html
-.idea/workspace.xml
+HELP.md
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
+
+### VS Code ###
+.vscode/
