--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/issuetracking
 spring.datasource.username=root
-spring.datasource.password=mazmaz22
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
